--- a/angular.json
+++ b/angular.json
@@ -61,7 +61,8 @@
             "outputMode": "server",
             "ssr": {
               "entry": "src/server.ts"
-            }
+            },
+            "baseHref": "/portfolioAkb/"
           },
           "configurations": {
             "production": {
@@ -122,8 +123,14 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
